<resources>
    <string name="app_name">HakatonIndoorway</string>
    <string name="your_plan">Twój plan</string>
    <string name="building_id">4i-ZPUDYt_g</string>
    <string name="floor_2_id">3-_M01M3r5w</string>
    <string name="floor_1_id">gVI7XXuBFCQ</string>
    <string name="floor_0_id">_Uu-zwqsoWk</string>
    <string name="close">Zamknij</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Zaloguj przez USOS</string>
    <string name="action_sign_in_mock">Zaloguj mockując dane</string>
    <string name="przywitanie">Witamy Cię serdecznie</string>

    <string name="repeat">powtórz</string>
    <string name="next_communicate">następny komunikat</string>
    <string name="prev_communicate">poprzedni komunikat</string>

    <string name="next_day">Przedstawić plan na następny dzień?</string>
    <string name="menu">Jesteś w menu. Przytrzymaj ekran by usłyszeć swój harmonogram. Przesuń w górę by zapoznać się z obsługą aplikacji.</string>
    <string name="course_info1">Twoje najbliższe zajęcia: %1$s za %2$d minut, sala %3$s.</string>
    <string name="course_info2">Godzina %1$s, %2$s, sala %3$s.</string>
    <string name="guide">Zaczynam prowadzić. Prowadzę. Kończę prowadzić. </string>
    <string name="user_guide">Będąc w menu, przytrzymaj ekran, a zostanie przedstawiony Twój harmonogram. Zajęcia będą przedstawiane zgodnie z ich kolejnością. W każdej chwili możesz przełączyć się pomiedzy zajęciami, przesuwając palcem w prawo lub w lewo. By doprowadzić Cię do lokalizacji danego wydarzenia, dwukrotnie stuknij w trakcie jego przedstawiania.
        By wrócić do menu, w dowolnej chwili przesuń palcem w dół. Gdy zadam Ci pytanie, na przykład o ewentualne przedstawienie harmonogramu kolejnych dni, odpowiedź twierdząca to dwukrotne stuknięcie w ekran. Przyjemnego użytkowania!</string>
    <string name="searching_safe_road">Szykuję bezpieczną trasę!</string>
</resources>
