<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#353632"
    tools:context="com.example.username.hakatonindoorway.LoginActivity">

    <LinearLayout
        android:id="@+id/llIntro"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textToSay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/przywitanie"
            />

        <Button
            android:id="@+id/repeat"
            android:text="@string/repeat"
            android:textStyle="bold"
            android:background="#30bced"
            android:textColor="#353632"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="repeatCommunicate"
            android:layout_marginBottom="20px"/>

        <Button
            android:id="@+id/nextCommunicate"
            android:text="@string/next_communicate"
            android:textStyle="bold"
            android:background="#30bced"
            android:textColor="#353632"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="nextCommunicate"
            android:layout_marginBottom="20px"/>

        <Button
            android:id="@+id/prevCommunicate"
            android:text="@string/prev_communicate"
            android:textStyle="bold"
            android:background="#30bced"
            android:textColor="#353632"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="prevCommunicate"
            android:layout_marginBottom="20px"/>




        <!--<ImageView-->
            <!--android:src="@drawable/ic_logo"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->

        <!--<Button-->
            <!--android:id="@+id/email_sign_in_button"-->
            <!--android:layout_marginTop="96dp"-->
            <!--android:onClick="singWithUsos"-->
            <!--android:layout_gravity="bottom"-->
            <!--android:text="@string/action_sign_in"-->
            <!--android:textStyle="bold"-->
            <!--android:background="#30bced"-->
            <!--android:textColor="#353632"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"/>-->

        <Button
            android:id="@+id/email_sign_in_button_mock"
            android:layout_marginTop="20dp"
            android:onClick="singWithUsosMock"
            android:layout_gravity="bottom"
            android:text="@string/action_sign_in_mock"
            android:textStyle="bold"
            android:background="#30bced"
            android:textColor="#353632"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <!--<WebView-->
        <!--android:id="@+id/wvLogin"-->
        <!--android:visibility="gone"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"/>-->

</FrameLayout>
